--- a/frontend/src/Pages/landingPage.css
+++ b/frontend/src/Pages/landingPage.css
@@ -1,7 +1,8 @@
 .playing, .online {
   height: 200px;
   width: 400px;
-  border: 5px solid red;
+  border: 3px solid black;
+  background-color: cornsilk;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -24,16 +25,23 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 15px;
 }
 .Carousel{
   /* display: flex; */
   /* justify-content: center; */
-  width: 500px;
-  height: 256px;
+  width: 700px;
+  border: 3px solid black;
+  height: 356px;
+  
 }
 
 .btns{
+  border: 2px solid black;
 width: 100px;
+margin-top: 15px;
+margin-bottom: 15px;
+
 }
 
 .blue{
