--- a/frontend/src/Pages/homePage.css
+++ b/frontend/src/Pages/homePage.css
@@ -1,6 +1,8 @@
+*{
+  /* background-image: url("/public/images/background-img.png"); */
+}
 
-
-#logo-name{
-    display: flex;
-    justify-content: space-between;
+#logo-name {
+  display: flex;
+  justify-content: space-between;
 }
