--- a/frontend/src/Pages/signUpPage.css
+++ b/frontend/src/Pages/signUpPage.css
@@ -1,85 +1,111 @@
-.register-photo {
-    background:#f1f7fc;
-    padding:80px 0;
+#signupForm{
+  border: 2px solid red;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 500px;
+  width: 200px;
+}
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: sans-serif;
+}
+
+#body{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* position of form  */
+  min-height: 100vh;
+  flex-direction: column;
+  gap: 30px;
+  background-image: url('/public/images/background-img.png');
+  background-repeat: repeat;
+  background-size: cover;
+  position: absolute;
+  left: 0;
+  right: 0;
+  height:100%;
+}
+.inputBox{
+  position: relative;
+  width: 250px;
+}
+.inputBox input{
+  width: 100%;
+  padding: 10px;
+  border: 1px solid rgba(92.88deg, #455EB5 9.16%, #5643CC 43.89%, #673FD7 64.72%);
+  background: #1d2b3a;
+  border-radius: 5px;
+  outline: none;
+  color: #fff;
+  font-size: 1em;
+  transition: 0.5s;
+}
+.inputBox span{
+  position: absolute;
+  left: 0;
+  padding: 10px;
+  pointer-events: none;
+  font-size: 1em;
+  color: rgba(92.88deg, #455EB5 9.16%, #5643CC 43.89%, #673FD7 64.72%);
+  text-transform: uppercase;
+  transition: 0.5s;
+}
+/* color of text  */
+.inputBox input:valid ~ span,
+.inputBox input:focus ~ span{
+  color: #5643CC;
+  transform: translateX(10px) translateY(-7px);
+  font-size: 0.65em;
+  padding: 0 10px;
+  background: #1d2b3a;
+  border-left: 1px solid #00dfc4;
+  border-right: 1px solid #00dfc4;
+  letter-spacing: 0.2em;
+}
+.inputBox input:valid,
+.inputBox input:focus{
+  border: 1px solid #5643CC
+}
+span{
+  color: white;
+}
+
+#signupbtn{
+  width: 100px;
+  height: 2rem;
+  background-image: linear-gradient(92.88deg, #455EB5 9.16%, #5643CC 43.89%, #673FD7 64.72%);
+  border-radius: 8px;
+  border-style: none;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  flex-shrink: 0;
+  font-family: "Inter UI","SF Pro Display",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;
+  font-size: 16px;
+  margin: 5px;
+  font-weight: 500;
+  padding: 0 1.6rem;
+  text-align: center;
+  text-shadow: rgba(0, 0, 0, 0.25) 0 3px 8px;
+  transition: all .5s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+.text{
+  /* margin-right: 300px; */
+}
+#signupbtn:hover {
+  box-shadow: rgba(80, 63, 205, 0.5) 0 1px 30px;
+  transition-duration: .1s;
+}
+
+@media (min-width: 768px) {
+  #signupbtn {
+    /* padding: 0 2.6rem; */
   }
-  
-  .register-photo .image-holder {
-    display:table-cell;
-    width:auto;
-    /* background:url(../../assets/img/meeting.jpg); */
-    background-size:cover;
-  }
-  
-  .register-photo .form-container {
-    display:table;
-    max-width:900px;
-    width:90%;
-    margin:0 auto;
-    box-shadow:1px 1px 5px rgba(0,0,0,0.1);
-  }
-  
-  .register-photo form {
-    display:table-cell;
-    width:400px;
-    background-color:#ffffff;
-    padding:40px 60px;
-    color:#505e6c;
-  }
-  
-  @media (max-width:991px) {
-    .register-photo form {
-      padding:40px;
-    }
-  }
-  
-  .register-photo form h2 {
-    font-size:24px;
-    line-height:1.5;
-    margin-bottom:30px;
-  }
-  
-  .register-photo form .form-control {
-    background:#f7f9fc;
-    border:none;
-    border-bottom:1px solid #dfe7f1;
-    border-radius:0;
-    box-shadow:none;
-    outline:none;
-    color:inherit;
-    text-indent:6px;
-    height:40px;
-  }
-  
-  .register-photo form .form-check {
-    font-size:13px;
-    line-height:20px;
-  }
-  
-  .register-photo form .btn-primary {
-    background:#f4476b;
-    border:none;
-    border-radius:4px;
-    padding:11px;
-    box-shadow:none;
-    margin-top:35px;
-    text-shadow:none;
-    outline:none !important;
-  }
-  
-  .register-photo form .btn-primary:hover, .register-photo form .btn-primary:active {
-    background:#eb3b60;
-  }
-  
-  .register-photo form .btn-primary:active {
-    transform:translateY(1px);
-  }
-  
-  .register-photo form .already {
-    display:block;
-    text-align:center;
-    font-size:12px;
-    color:#6f7a85;
-    opacity:0.9;
-    text-decoration:none;
-  }
-  
+}
