--- a/frontend/src/components/friendsActivity.css
+++ b/frontend/src/components/friendsActivity.css
@@ -4,13 +4,15 @@
     justify-content: space-between;
     flex-wrap: wrap;
     width: 110;
+    /* background-image: url('/public/images/background-img.png'); */
     /* border: 2px solid green */
 }
 .img-item{
+    height: 250px;
     width: 370px;
     margin: 10px;
     border-radius: 20px;
-    /* border: 2px solid blue */
+    border: 3px solid pink;
 }
 
 #platform-box{
@@ -27,6 +29,7 @@
     /* border: 2px solid black; */
     width: 100%;
     height: 100%;
+    
 }
 
 #title1{
