--- a/frontend/src/components/searchpost.css
+++ b/frontend/src/components/searchpost.css
@@ -1,22 +1,27 @@
 .main {
-    display: flex;
-    height: 100vh;
-    width: 100%;
-    align-items: center;
-    flex-direction: column;
-    row-gap: 20px;
+  display: flex;
+  height: 100%;
+  width: 100%;
+  align-items: center;
+  flex-direction: column;
+  row-gap: 20px;
 }
 
-h1 {
-    margin: 10px;
-    font-size: 40px;
-    color: rgb(1, 1, 59);
+h2 {
+  margin: 10px;
+  font-size: 40px;
+  /* color: rgb(1, 1, 59); */
+  color: pink;
 }
 
 .search {
-    width: 30%;
+  width: 30%;
+  border: 3px solid pink;
 }
 
 ul li {
-    font-size: 20px;
-} 
+  font-size: 20px;
+  font-weight: bold;
+  color: pink;
+  list-style-type: none;
+}
