--- a/frontend/src/components/assembleConnect.css
+++ b/frontend/src/components/assembleConnect.css
@@ -1,33 +1,88 @@
 #postContainer {
   display: flex;
+  flex-direction: row;
+  align-items: center;
   justify-content: center;
   margin-top: 20px;
-  margin-left:100px;
+  margin-left: 100px;
 }
 
 #postContainer button {
-  display: flex;
-  align-items: center;
-  border-radius: 5px;
-  height: 50px;
-  width: 70px;
-  margin-top: 80px;
+  
+  width: 100px;
+  height: 2rem;
+  background-image: linear-gradient(
+    92.88deg,
+    #455eb5 9.16%,
+    #5643cc 43.89%,
+    #673fd7 64.72%
+  );
+  border-radius: 8px;
+  border-style: none;
+  box-sizing: border-box;
+  color: #ffffff;
+  cursor: pointer;
+  flex-shrink: 0;
+  font-family: "Inter UI", "SF Pro Display", -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    sans-serif;
   font-size: 16px;
-  /* margin: 5px; */
+  margin: 5px;
   font-weight: 500;
-  padding: 0 0.3rem;
-  /* text-align: center; */
+  text-align: center;
   text-shadow: rgba(0, 0, 0, 0.25) 0 3px 8px;
   transition: all 0.5s;
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
+  border: 3px solid black
 }
 #header {
-  display: flex;
-  justify-content: center;
+  display: inline-block;
+  /* background-image: linear-gradient(
+    92.88deg,
+    #455eb5 9.16%,
+    #5643cc 43.89%,
+    #673fd7 64.72%
+  ); */
+  background-image: url('https://i.pinimg.com/736x/98/2d/aa/982daa76a2deebfd8a2b8e784b5707c7.jpg');
+  background-size: cover;
+  /* background: rgba(255,255,255, 0.1); */
+  /* background-color: #ffffff; */
+  /* opacity: 0.5; */
   margin-top: 50px;
+  border-radius: 40px;
+  /* width: max-content; */
 }
 #tags {
-  margin-top: 80px;
+  width: 190px;
+  height: auto;
+  /* border: 3px solid white;= */
+  margin-right: 20px;
 }
+
+#taglist{
+  margin: 0px;
+  padding-left: 0px;
+}
+
+/* #taglist h4 {
+  color:#673fd7;
+  font-family: "Trebuchet MS", "sans-serif";
+  background-color: #ffffff;
+  border-radius: 15px;
+} */
+
+
+#postHeader {
+  /* color:#455eb5  */
+  color:#673fd7;
+  /* border: 3px solid black; */
+  font-family: "Impact", "fantasy"
+  /* font-family: Arial, Helvetica, sans-serif; */
+  /* text-decoration: underline; */
+}
+
+
+
+
