--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -18,6 +18,6 @@ body {
 
 @media only screen and (max-width: 425px) {
     body {
-        padding: 40px; 
+        /* padding: 40px;  */
     }
 }
