Updated Read Me

--- a/frontend/src/components/assembleConnect.css
+++ b/frontend/src/components/assembleConnect.css
@@ -4,11 +4,10 @@
   align-items: center;
   justify-content: center;
   margin-top: 20px;
-  margin-left: 100px;
+  /* margin-left: 100px; */
 }
 
 #postContainer button {
-  
   width: 100px;
   height: 2rem;
   background-image: linear-gradient(
@@ -35,17 +34,18 @@
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
-  border: 3px solid black
+  border: 3px solid black;
 }
 #header {
   display: inline-block;
+
   /* background-image: linear-gradient(
     92.88deg,
     #455eb5 9.16%,
     #5643cc 43.89%,
     #673fd7 64.72%
   ); */
-  background-image: url('https://i.pinimg.com/736x/98/2d/aa/982daa76a2deebfd8a2b8e784b5707c7.jpg');
+  background-image: url("https://i.pinimg.com/736x/98/2d/aa/982daa76a2deebfd8a2b8e784b5707c7.jpg");
   background-size: cover;
   /* background: rgba(255,255,255, 0.1); */
   /* background-color: #ffffff; */
@@ -61,7 +61,7 @@
   margin-right: 20px;
 }
 
-#taglist{
+#taglist {
   margin: 0px;
   padding-left: 0px;
 }
@@ -73,16 +73,70 @@
   border-radius: 15px;
 } */
 
-
 #postHeader {
   /* color:#455eb5  */
-  color:#673fd7;
+  color: #673fd7;
   /* border: 3px solid black; */
-  font-family: "Impact", "fantasy"
+  font-family: "Impact", "fantasy";
   /* font-family: Arial, Helvetica, sans-serif; */
   /* text-decoration: underline; */
 }
 
+@media (max-width: 1559px) {
+  #header{
+    width: 750px;
+  }
+  #postparent {
+    /* display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center; */
+    /* border: 1px solid red; */
+    /* width: 750px; */
+  }
+  #postContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+    /* width: 750px; */
+  }
+}
 
+@media (max-width: 395px) {
+  #header{
+    width: 350px;
 
-
+  }
+  .logoCon{
+    width: 200px;
+    height: 200px;
+  }
+  .img-item {
+    height: 150px;
+    width: 170px;
+    margin: 10px;
+    border-radius: 20px;
+    border: 3px solid black;
+}
+#postHeader{
+  font-size: 20px
+}
+  #postparent {
+    /* display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center; */
+    /* border: 1px solid red; */
+    /* width: 750px; */
+  }
+  #postContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+    /* width: 750px; */
+  }
+}
