--- a/frontend/src/components/searchpost.css
+++ b/frontend/src/components/searchpost.css
@@ -3,36 +3,98 @@
   height: 100%;
   width: 100%;
   align-items: center;
-  flex-direction: column;
+  flex-direction: row;
   row-gap: 20px;
+  /* background-color: whitesmoke; */
+  background-image: url("https://e0.pxfuel.com/wallpapers/353/446/desktop-wallpaper-this-pic-i-took-is-pretty-bi-bicolors-bisexual-aesthetic.jpg");
+  
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding-left: 30%;
+  box-shadow: 30px;
 }
 
-h2 {
+/* h2 {
   margin: 10px;
   font-size: 40px;
   /* color: rgb(1, 1, 59); */
-  color: black;
-  font-family: "Trebuchet MS", "sans-serif"
-}
+  /* color: #673fd7; */
+  /* font-family: "Trebuchet MS", "sans-serif"; */
+  /* font-family: "Impact", "fantasy"; */
+  /* background-color: white; */
+  /* background-image: url("https://e0.pxfuel.com/wallpapers/353/446/desktop-wallpaper-this-pic-i-took-is-pretty-bi-bicolors-bisexual-aesthetic.jpg");
+  width: fit-content;
+  border-radius: 8px;
+  padding: 0 5px;
+  padding-left: 30%; */
+/* } */ 
 
 .search {
   width: 30%;
-  border: 5px solid black;
-  color:#673fd7;
+  border: 3px solid #673fd7;;
+  color: #673fd7;
+  background-color: white;
+  border-radius: 8px;
+  font-family: "Impact", "fantasy";
+}
+#PostTitle{
+  margin: 10px;
+  font-size: 40px;
+  color: #673fd7;
+  font-family: "Impact", "fantasy";
+  background-color: white;
+  /* background-image: url("https://e0.pxfuel.com/wallpapers/353/446/desktop-wallpaper-this-pic-i-took-is-pretty-bi-bicolors-bisexual-aesthetic.jpg"); */
+  background-repeat: no-repeat;
+  background-size: cover;
+  
+  box-shadow: 5px;
+  border-radius: 8px;
+  padding: 0 5px;
 }
 
+.outlined-basic label {
+  font-size: 25px !important;
+  color: #673fd7;;
+  font-family: "Impact", "fantasy";
+}
 ul li {
   font-size: 20px;
   font-family: "Impact", "fantasy";
   color: #5643cc;
   list-style-type: none;
   background-color: white;
-  border-radius: 15px;
+  border-radius: 8px;
   margin: 5px;
+  padding: 0 5px;
+  /* -webkit-transition-duration: 0.4s; /* Safari */
+  /* transition-duration: 0.4s; */
+  /* text-decoration: none; */
+  /* overflow: hidden; */
+  /* cursor: pointer; */
   /* opacity: 0.5; */
 }
 ul li:hover {
-  background-image: url('https://i.pinimg.com/736x/98/2d/aa/982daa76a2deebfd8a2b8e784b5707c7.jpg');
+  background-image: url("https://i.pinimg.com/736x/98/2d/aa/982daa76a2deebfd8a2b8e784b5707c7.jpg");
   border-radius: 20px;
 }
 
+ul li:after {
+  content: "";
+  background: purple;
+  display: block;
+  position: absolute;
+  padding-top: 50px;
+  padding-left: 240px;
+  margin-left: -10px!important;
+  margin-top: -40px;
+  opacity: 0;
+  transition: all 0.8s;
+  border-radius: 8px;
+}
+
+ul li:active:after {
+  padding: 0;
+  margin: 0;
+  opacity: 1;
+  transition: 0s
+}
