--- a/src/Pages/FavoritesPage.css
+++ b/src/Pages/FavoritesPage.css
@@ -1,10 +1,39 @@
 .game-container {
-    display: flex;
-    flex-direction: row;
-    align-items: end;
+  display: flex;
+  flex-direction: row;
+  align-items: end;
 }
 
-.game-container img{
-    border: 4px solid black;
+.game-container img {
+  border: 4px solid black;
 }
 
+.game-container button {
+  width: 100px;
+  height: 2rem;
+  background-image: linear-gradient(
+    92.88deg,
+    #455eb5 9.16%,
+    #5643cc 43.89%,
+    #673fd7 64.72%
+  );
+  border-radius: 8px;
+  border-style: none;
+  box-sizing: border-box;
+  color: #ffffff;
+  cursor: pointer;
+  flex-shrink: 0;
+  font-family: "Inter UI", "SF Pro Display", -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    sans-serif;
+  font-size: 16px;
+  margin: 5px;
+  font-weight: 500;
+  text-align: center;
+  text-shadow: rgba(0, 0, 0, 0.25) 0 3px 8px;
+  transition: all 0.5s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  border: 3px solid black;
+}
