--- a/src/Pages/gamesPage.css
+++ b/src/Pages/gamesPage.css
@@ -10,6 +10,15 @@ img {
   border-radius: 20px;
 }
 .headers{
-  color: white;
-  margin-top: 90px;
+  color: #673fd7;
+  font-family: "Impact", "fantasy";
+  background-image: url("https://i.pinimg.com/736x/98/2d/aa/982daa76a2deebfd8a2b8e784b5707c7.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 8px;
+  width: fit-content;
+  padding-left: 30px;
+  padding-right: 30px;
+  margin-left: auto;
+  margin-right: auto;
 }
